# playground-rust-ipc-experiment

./: Cargo.toml  Justfile  LICENSE.md  README.md
.github/workflows/: benchmark.yml  build.yml
crates/ipc-benchmark/: Cargo.toml  Justfile  README.md
crates/ipc-benchmark/src/: lib.rs
crates/ipc-benchmark/src/ipcc/: child.rs  mod.rs  parent.rs
crates/ipc-benchmark/src/shmem/: mod.rs
crates/ipc-benchmark/src/shmem/raw_sync/: child.rs  mod.rs  parent.rs
crates/ipc-benchmark/src/shmem/shared_mem_queue/: child.rs  mod.rs  parent.rs
