[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anyhow = { version = "1.0.87", default-features = false }
bytes = { version = "1.7.1", default-features = false }
conv = { version = "0.3.3", default-features = false }
ipc-channel = { version = "0.18.2", default-features = false }
memmap = { version = "0.7.0", default-features = false }
raw_sync = { version = "0.1.5", default-features = false }
shared_memory = { version = "0.12.4", default-features = false }
serde = { version = "1.0.210", default-features = false }
serde_json = { version = "1.0.128", default-features = false }
shared-mem-queue = { version = "0.1.0", default-features = false }
tempfile = { version = "3.12.0", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
uuid = { version = "1.10.0", default-features = false }
